fix overflow of contents on website.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@
     box-sizing: border-box;
 }
    
-html {
+html, body {
     font-size: 100%;
+    position: relative;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,10 +29,13 @@ body {
     line-height: 1.6;
     height: 100vh;
     width: 100vw;
-    overflow-x: hidden;
 }
 
 /* === landing page === */
+header #mountain {
+    height: 100%;
+    width: 100%;
+}
 #mountain::after{
     content: "";
     height: 100vh;
@@ -110,8 +115,8 @@ body {
 
 /* === Navbar === */
 .navContainer ul {
-    overflow: hidden;
-    margin: auto;
+    /* overflow-x: hidden; */
+    /* margin: auto; */
     padding: 2rem 1rem;
     
     text-decoration: none;
@@ -342,7 +347,9 @@ footer h4 {
             width: auto;
         }
         .about p {
-            margin: auto 0;
+            margin: .5rem;
+            padding: 2rem 2rem;
+            font-size: .95rem;
         }
         .about img {
             align-self: center;
@@ -354,6 +361,7 @@ footer h4 {
         .mainGrid section h2 {
             font-size: 3rem;
             letter-spacing: .5rem;
+            padding-top: 1rem;
         }
     }
     /* how a page would look when you would print the page */
